--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.github.jianyuyouhun:AutoBannerView:0.1.1',{
+        exclude group: 'com.android.support'
+    }
     compile project(':library')
 }
