--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity
             android:name=".activitys.ImageLoadTestActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activitys.LoginTestActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
