学习封装recyclerView为下拉刷新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity
             android:name=".activitys.LoginTestActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activitys.SupportDesignActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
