--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.github.jianyuyouhun:autobannerview:0.1.4',{
+    compile 'com.github.jianyuyouhun:autobannerview:0.2.0',{
         exclude group: 'com.android.support'
     }
+    compile 'com.android.support:design:25.3.1'
     compile project(':library')
 }
