--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.github.jianyuyouhun:autobannerview:0.2.0',{
         exclude group: 'com.android.support'
     }
+    compile 'com.github.zcweng:switch-button:0.0.3@aar'
     compile 'com.android.support:design:25.3.1'
     compile project(':library')
 }
