--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jianyuyouhun.jmvp">
+          package="com.jianyuyouhun.jmvp">
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".app.App"
         android:allowBackup="true"
@@ -16,20 +18,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activitys.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".activitys.AdapterTestActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activitys.HttpTestActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.jianyuyouhun.jmvplib.app.exception.ExceptionActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activitys.RequestPermissionActivity"
             android:screenOrientation="portrait"/>
@@ -38,6 +40,9 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activitys.LoginTestActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activitys.AnimatorViewActivity"
             android:screenOrientation="portrait"/>
     </application>
 
