--- a/inject/build.gradle
+++ b/inject/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.github.dcendents.android-maven'
-//group='com.github.jianyuyouhun'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.jianyuyouhun'
 
 android {
     compileSdkVersion 25
@@ -52,11 +52,4 @@ artifacts {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile project (':inject')
 }
