--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Mar 17 14:01:39 CST 2017
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.nonProxyHosts=10.254.*
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.nonProxyHosts=10.254.*
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=1080
+#systemProp.http.proxyPort=1080
