--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW"/>
 
     <application
         android:name=".app.App"
@@ -54,6 +54,10 @@
         <activity
             android:name=".ui.activitys.ViewPagerActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activitys.LineChartActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
